--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "e-commerce clone",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --watch backend --exec node --experimental-modules backend/server.js"
+    "start ": "nodemon --watch backend --exec node --experimental-modules backend/server.js",
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "author": "yunhalee",
   "license": "ISC",
