--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "index.js",
   "scripts": {
     "start ": "nodemon --watch backend --exec node --experimental-modules backend/server.js",
-    "start": "node backend/server.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install npm && run build"
+    "start": "node /backent/server.js",
+    "heroku-postbuild": "cd frontend && npm install && npm run build"
   },
   "engine": {
     "node": "16.1.0",
