--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "start ": "nodemon --watch backend --exec node --experimental-modules backend/server.js",
-    "start": "node /backend/server.js",
+    "start": "node backend/server.js",
     "heroku-postbuild": "cd frontend && npm install && npm run build"
   },
   "engine": {
