--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start ": "nodemon --watch backend --exec node --experimental-modules backend/server.js",
     "start": "node backend/server.js",
-    "heroku-postbuild": "cd frontend && npm install && npm run build"
+    "heroku-postbuild": "cd frontend && npm install && npm run build && cd ../backend && npm install && npm run build"
   },
   "engine": {
     "node": "16.1.0",
