--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "description": "share your memory with other people.",
   "main": "index.js",
   "scripts": {
-    "start ": "nodemon --watch backend --exec node --experimental-modules backend/server.js",
-    "start": "node backend/server.js",
-    "heroku-postbuild": "cd frontend && npm install && npm run build && cd ../backend && npm install && npm run build"
+    "start": "nodemon --watch backend --exec node --experimental-modules backend/server.js",
+    "heroku-postbuild": "cd frontend && npm install && npm run build"
   },
   "engine": {
     "node": "16.1.0",
