--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "share your memory with other people.",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --watch backend --exec node --experimental-modules backend/server.js",
+    "start" :"node server.js",
     "heroku-postbuild": "cd frontend && npm install && npm run build"
   },
   "engine": {
