--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "build": "cd frontend && npm install && npm run build",
-    "start": "nodemon --watch backend --exec node --experimental-modules backend/server.js",
+    "start": "nodemon --watch backend --exec node --experimental-modules backend/server.js"
   },
   "author": "yunhalee",
   "license": "ISC",
