--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
   "devDependencies": {
     "eslint": "^7.27.0",
     "nodemon": "^2.0.7"
+  },
+  "engine": {
+    "node": "16.1.0",
+    "npm": "7.11.2"
   }
 }
