--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mailgun-js": "^0.22.0",
     "mongoose": "^5.12.11",
     "multer": "^1.4.2",
+    "react-google-api": "^1.0.1",
     "socket.io": "^4.1.2"
   },
   "devDependencies": {
