--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "jsonwebtoken": "^8.5.1",
-    "mailgun-js": "^0.22.0",
     "mongoose": "^5.12.11",
     "multer": "^1.4.2",
+    "nodemailer": "^6.7.0",
     "react-google-api": "^1.0.1",
     "socket.io": "^4.1.2"
   },
